--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,17 @@
-﻿# OS
+# dependencias
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# builds
+dist/
+frontend/dist/
+
+# entornos
+.env
+frontend/.env
+backend/.env
+
+# sistema
 .DS_Store
 Thumbs.db
-
-# Node
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-package-lock.json
-
-# Build / tooling
-dist/
-build/
-coverage/
-.vscode/
-.idea/
-.vercel/
-*.local
-
-# Env
-.env
-.env.*.local
-backend/.env
-frontend/.env
