--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,18 @@
 {
   "name": "notes-saas-backend",
   "version": "1.0.0",
-  "private": true,
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "node server.js",
-    "start": "node server.js"
+    "dev": "node server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.1",
-    "serverless-http": "^3.2.0"
-  },
-  "engines": {
-    "node": ">=18"
+    "mongoose": "^7.6.0"
   }
 }
