fix: netlify SPA redirects + build config

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,24 @@
-# ... tu [build], [functions] y [[redirects]] ya existentes ...
+[build]
+  base = "Interfaz"
+  command = "npm run build"
+  publish = "dist"
 
-# CORS para el backend (Functions) sin tocar tu código
+# Proxy: todo lo que empiece con /api/ va a tu backend
+[[redirects]]
+  from = "/api/*"
+  to = "https://TU-BACKEND.vercel.app/:splat"
+  status = 200
+  force = true
+
+# SPA fallback
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+# (Opcional) Headers CORS sobre el proxy (no functions)
 [[headers]]
-  for = "/.netlify/functions/api/*"
+  for = "/api/*"
   [headers.values]
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
